# timsexperiments.foo

./: .gitignore  .gitmodules  README.md  bun.lockb  cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  timsexperiments.sln
.devcontainer/: devcontainer.json
.github/workflows/: _studio.yml
apps/timsexperiments/: .env.local  .prettierrc  README.md  astro.config.mjs  astro.config.ts  bun.lockb  components.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
apps/timsexperiments/db/: config.ts
apps/timsexperiments/public/: robots.txt
apps/timsexperiments/src/: consts.ts  env.d.ts  index.d.ts
apps/timsexperiments/src/components/: BaseHead.astro  ButtonLink.astro  Footer.astro  Header.astro  HeaderLink.astro  Prose.astro  ScrollTracker.astro  Subscribe.astro
apps/timsexperiments/src/content/: config.ts
apps/timsexperiments/src/db/: config.ts  validators.ts
apps/timsexperiments/src/layouts/: BaseLayout.astro  BlogPost.astro
apps/timsexperiments/src/pages/: about.astro  index.astro
apps/timsexperiments/src/scripts/: animate.ts  color_preference.ts  copy_code.ts  copy_heading_link.ts  count_view.ts  cube.ts  (+2 more)
apps/view-counter/: .gitignore  package.json  tsconfig.json  wrangler.toml
apps/view-counter/src/: index.ts
projects/benchmarking-everything/: LICENSE  README.md
projects/benchmarking-everything/go/: Dockerfile
projects/benchmarking-everything/java/: helloworld.Dockerfile
projects/benchmarking-everything/python/hello_world/: Dockerfile  pyproject.toml
projects/benchmarking-everything/python/hello_world/src/hello_world/: main.py
(+82 files in other folders)
