[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Tim <tim@timsexperiments.foo>"]
readme = "README.md"
packages = [{include = "hello_world", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
